tests/bad/single/43555195/assignment2/views/base.tpl
<!DOCTYPE html>
<html>
<head lang="en">
    <meta charset="UTF-8">
    <meta name="author" content="Martin Appleton">
    <title>{{title}}</title>
    <link rel="stylesheet" href="/static/style.css" type="text/css">
</head>
<body>

<!-- these are sample psst messages to use in your design,
     use as many as you wish to best illustrate your
     design -->
<div id="container">
<header>
</header>
<nav>
<ul>
<li><a href="/">Home</a></li></ul>
</nav>
<section>
    {{!base}}
</section>
</div>
<div id="background"></div>
</body>
</html>
